<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LostAndFound</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Lost and Found</string>
    <string name="title_activity_found_items">FoundItemsActivity</string>

    <!-- 底部按钮和各页标题 -->
    <string name="lost_items">寻物品</string>
    <string name="found_items">寻失主</string>
    <string name="my_post">我的发布</string>
    <string name="my_messages">我的消息</string>
    <string name="more">更多</string>
    <string name="post">发布消息</string>
    <string name="details">详细信息</string>
    <string name="sign_up">注册</string>
    <string name="sign_in">登录</string>

    <!-- 页面字符 -->
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="username_signup">请输入用户名</string>
    <string name="password_signup">请输入密码（8-32位）</string>
    <string name="password_confirm">请再输入一次</string>
    <string name="copyright">LostAndFound, All Rights Reserved</string>
    <string name="please_login">您还没有登录，请登录账号</string>
    <string name="nothing">暂无信息</string>
    <string name="about">关于&#160;&#160;&#160;&#160;></string>
    <string name="exit">退出&#160;&#160;&#160;&#160;></string>
    <string name="add">添加内置消息&#160;&#160;></string>
    <string name="qr_code">二维码链接&#160;&#160;&#160;></string>
    <string name="logout">注销&#160;&#160;&#160;&#160;></string>
    <string name="sign_in_text">点击此处登陆</string>
    <string name="please_login_detail">登录后即可见发布人信息</string>

    <!--title-->
    <string name="title_activity_my_post">MyPostActivity</string>
    <string name="title_activity_lost_items">LostItemsActivity</string>
    <string name="title_activity_my_messages">MyMessagesActivity</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

</resources>
