<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0">

            <android.support.v4.view.ViewPager
                android:id="@+id/vPager"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:paddingBottom="0.0dip"
                android:persistentDrawingCache="animation"/>
        </FrameLayout>

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone"/>
        <RadioGroup
            android:id="@+id/main_tab"
            android:background="@drawable/maintab_toolbar_bg"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="bottom">
            <RadioButton
                android:layout_marginTop="0.5dip"
                android:text="@string/lost_items"
                android:drawableTop="@drawable/icon_lost_items"
                android:id="@+id/radio_button0"
                style="@style/main_tab_bottom"/>
            <RadioButton
                android:layout_marginTop="0.5dip"
                android:text="@string/found_items"
                android:drawableTop="@drawable/icon_found_items"
                android:id="@+id/radio_button1"
                style="@style/main_tab_bottom"/>
            <RadioButton
                android:layout_marginTop="0.5dip"
                android:text="@string/my_post"
                android:drawableTop="@drawable/icon_my_post"
                android:id="@+id/radio_button2"
                style="@style/main_tab_bottom"/>
            <RadioButton
                android:layout_marginTop="1.0dip"
                android:text="@string/my_messages"
                android:drawableTop="@drawable/icon_my_messages"
                android:id="@+id/radio_button3"
                style="@style/main_tab_bottom"/>
            <RadioButton
                android:layout_marginTop="0.5dip"
                android:text="@string/more"
                android:drawableTop="@drawable/icon_more"
                android:id="@+id/radio_button4"
                style="@style/main_tab_bottom"/>
        </RadioGroup>
    </LinearLayout>
</TabHost>
