<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_more"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/title_bg">

        <TextView
            android:id="@+id/tv_more"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/more"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/content_more"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/button_add"
            android:orientation="vertical"
            android:gravity="center">

            <!--com.beardedhen.androidbootstrap.BootstrapCircleThumbnail-->
            <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                android:id="@+id/thumbnail_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                bootstrap:bct_image="@drawable/avatar"
                bootstrap:bct_size="large"
                bootstrap:bct_minimal="true"/>

            <TextView
                android:id="@+id/username_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/username"
                android:textSize="18sp"
                android:textColor="#444444"
                android:textStyle="bold"/>

        </LinearLayout>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/button_exit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:text="@string/exit"
            android:textSize="17sp"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_size="small"
            bootstrapbutton:bb_type="primary"/>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/button_about"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_exit"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:text="@string/about"
            android:textSize="17sp"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_size="small"
            bootstrapbutton:bb_type="primary"/>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/button_add"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_about"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:text="@string/add"
            android:textSize="17sp"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_size="small"
            bootstrapbutton:bb_type="primary"/>
    </RelativeLayout>

</LinearLayout>