<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <RelativeLayout
        android:id="@+id/title_post"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/title_bg">

        <ImageButton
            android:id="@+id/image_button_back_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_post"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="8dip"
            android:gravity="center_vertical"
            android:background="@drawable/title_button_back"/>

        <TextView
            android:id="@+id/tv_post"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/post"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/image_button_add_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/tv_post"
            android:layout_marginRight="20dip"
            android:layout_marginTop="8dip"
            android:gravity="center_vertical"
            android:background="@drawable/title_button_ensure"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/title_post_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RadioGroup
            android:id="@+id/radio_group_post"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_lost"
                android:text="@string/lost_items"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"/>

            <RadioButton
                android:id="@+id/radio_button_found"
                android:text="@string/found_items"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"/>

        </RadioGroup>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_number_post"
            android:text="请留下联系方式："
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_below="@+id/radio_group_post"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_number_post"
            android:textSize="17sp"
            android:hint="本软件会使用本机号码作为联系方式，他人联系您时将看到手机号码"
            android:gravity="start"
            android:numeric="integer"
            android:layout_below="@+id/text_number_post"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:maxLines="2"
            android:maxLength="20"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_title_post"
            android:text="请输入标题："
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_below="@+id/edit_number_post"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_title_post"
            android:textSize="17sp"
            android:hint="不超过10字"
            android:layout_below="@+id/text_title_post"
            android:gravity="start"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:maxLines="1"
            android:maxLength="10"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_content_post"
            android:text="请输入内容："
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_below="@+id/edit_title_post"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/edit_content_post"
            android:textSize="17sp"
            android:hint="不超过140字"
            android:layout_below="@+id/text_content_post"
            android:layout_above="@+id/text_number_post"
            android:gravity="start"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginBottom="5dip"
            android:maxLength="140"/>

    </RelativeLayout>

</LinearLayout>